# higgsML-uncertainty-mlops

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: test_wandb.yaml  toy_default.yaml  toy_default_easy.yaml  train_toy.yaml
data/: sample_data.txt
docs/: copilot_workplan.md  prompt_phase1.md
scripts/: compare_runs.py  generate_experiments.py  generate_one_experiment.py  list_runs.py  run_train.py  train.py  train_higgs.py
src/conformal_predictions/: config.py  data_viz.py  training.py
src/conformal_predictions/calibration/: __init__.py  intervals.py  scores.py  strategies.py
src/conformal_predictions/data/: toy.py
src/conformal_predictions/evaluation/: __init__.py  error_analysis.py  metrics.py  plots.py  pseudoexperiments.py  reports.py
src/conformal_predictions/mlops/: __init__.py  artifacts.py  log_keys.py  run_context.py  run_index.py  tracker.py
src/conformal_predictions/training/: __init__.py  core.py  models.py  trainer.py
tasks/: lessons.md  todo.md
tests/: test_artifacts.py  test_calibration.py  test_evaluation.py  test_log_keys.py  test_model_config.py  test_scripts_smoke.py  test_toy.py  test_tracking.py
